# cits5505-tournament-management-system

./: .gitignore  .prettierignore  .prettierrc.json  Makefile  README.md  TODO.md  checkpoint-2-doc.md  project-description-and-rubrics.md  pyproject.toml  samplepr.txt  styles.css  tournament-create.html  tournament-details.html
app/: .env.example  .gitignore  Makefile  config.py  pytest.ini  requirements-dev.txt  requirements.txt  run.py  wsgi.py
app/criktrack/: __init__.py  decorators.py  extensions.py  filters.py  seed.py  seed_data.py
app/criktrack/auth/: __init__.py  forms.py  routes.py
app/criktrack/comments/: __init__.py  routes.py
app/criktrack/errors/: __init__.py  handlers.py
app/matches/: routes.py  services.py
app/migrations/: env.py
app/players/: routes.py
app/tests/: conftest.py
app/users/: __init__.py  routes.py
docs/: implementation-plan-v2.md
docs/api-key-setup/: cricketdata-setup-en.md  google-maps-setup-en.md
docs/checkpoint-2/: checkpoint-2-doc.md  checkpoint-2-requirements.md
docs/conventions/: git-branch-naming-convention.md
docs/design-doc/: database-design-v1.md  database-design.md  plan-backend-v1.md  plan-frontend-v1.md  product-v2.md
frontend/: dashboard.html  index.html  login.html  match-record.html  match-scorecard.html  player-stats.html  profile-edit.html  profile.html  register.html  tournament-detail.html  tournament-public.html  tournaments-create.html  tournaments-list.html
frontend/css/: styles.css
frontend/js/: comments.js  config.js  layout.js  livefeed.js  main.js  maps.js  mockdata.js  roles.js
(+118 files in other folders)
